--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.eduardopires.bluetooth_chat.MainActivity">
+    tools:context="com.example.eduardopires.bluetooth_chat.SplashScreen">
 
     <ImageView
         android:layout_width="match_parent"
