--- a/app/src/main/res/layout/item_pairing_list.xml
+++ b/app/src/main/res/layout/item_pairing_list.xml
@@ -7,6 +7,7 @@
         android:id="@+id/item_text_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:textSize="16sp"/>
 
 </LinearLayout>
