--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/tools"
     android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <android.support.design.widget.FloatingActionButton
+    <com.github.clans.fab.FloatingActionMenu
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -13,7 +14,37 @@
         android:layout_marginRight="12dp"
         android:layout_marginBottom="12dp"
         app:backgroundTint="@color/colorPrimary"
-        android:src="@drawable/refresh_icon"/>
+        fab:menu_labels_position="left"
+        fab:menu_openDirection="up"
+        fab:menu_labels_textSize="14sp"
+        fab:menu_labels_cornerRadius="3dp"
+        fab:menu_labels_paddingTop="4dp"
+        fab:menu_labels_paddingRight="8dp"
+        fab:menu_labels_paddingBottom="4dp"
+        fab:menu_labels_paddingLeft="8dp"
+        fab:menu_labels_padding="8dp"
+        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
+        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
+        fab:menu_fab_size="normal"
+        fab:menu_showShadow="true"
+        fab:menu_fab_show_animation="@anim/my_show_animation"
+        fab:menu_fab_hide_animation="@anim/my_hide_animation">
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/refresh_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/refresh_icon"
+            fab:fab_size="mini"
+            fab:fab_label="Atualizar" />
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/server_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/refresh_icon"
+            fab:fab_size="mini"
+            fab:fab_label="Iniciar servidor"/>
+    </com.github.clans.fab.FloatingActionMenu>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
